--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -95,7 +95,7 @@ const notFound = (req, res) => {
 
 ## V. Next week
 - 10A - Server-side rendering with the Handlebars templating engine
-- 10B - MongoDB! See the **MongoDBCloudSetup** PDF in myCourses Week-10, and [How to use MongoDb Compass](https://www.mongodb.com/docs/compass/current/)
+- 10B - MongoDB! See the **MongoDBCloudSetup** PDF in myCourses Week-10, and [How to use MongoDb Compass](https://www.mongodb.com/docs/compass/current/) (which is an easy to use admin/client app for MongoDB)
 
 ---
 ---
