--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -1,5 +1,13 @@
 # Week 10A Notes
 
+## 0. Questions from last time
+
+---
+
+ - BTW - how can we completely "uninstall" packages we no longer need - like [**body-parser**](https://www.npmjs.com/package/body-parser)?
+
+---
+
 ## I. About Handlerbars
 - Handlebars is a simple *templating* language.
 - It uses a *template* and an *input object* to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions:
