--- a/weekly/09B.md
+++ b/weekly/09B.md
@@ -104,4 +104,4 @@ const notFound = (req, res) => {
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 9A Notes**](09A.md)  |  [**IGME-430 Home**](../) | Week 10A Notes
+|   [**Week 9A Notes**](09A.md)  |  [**IGME-430 Home**](../) | [**Week 10A Notes**](10A.md)
