--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -27,7 +27,7 @@
 
 ---
 
-## II. Server-side rendering with Handlebars
+## II. Server-side rendering with `express` & `express-handlebars`
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - Here's some code to get you started in **app.js**
 
