--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -1,3 +1,11 @@
 # Week 10B
 
 ## I. MongoDB
+
+
+---
+---
+
+| <-- Previous Unit | Home | Next Unit -->
+| --- | --- | --- 
+|   [**Week 10A Notes**](10A.md)  |  [**IGME-430 Home**](../) | Week 11A Notes
