--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -27,7 +27,7 @@
 
 ---
 
-## II. Server-side rendering with `express` & `express-handlebars`
+## II. Demo: Server-side rendering with `express` & `express-handlebars`
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - Here's some code to get you started in **app.js**
 
@@ -44,9 +44,19 @@ app.set('view engine', 'handlebars');
 app.set('views', `${__dirname}/../views`);
 ```
 
+- Notes:
+  - If you check out **package.json** you'll see that there is a `express-handlebars` dependency ...
+  - ... in **app.js** we are importing `express-handlebars`
+  - And now we have some new express methods to work with `app.engine()` and `app.set()`
+  - `app.engine()`
+    - https://expressjs.com/en/guide/using-template-engines.html
+    - https://www.npmjs.com/package/express-handlebars
+  - `app.set()`
+    - https://expressjs.com/en/api.html#app.set
+
 ---
 
-## III. More rendering with handlebars - loops & conditionals
+## III. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
  
