--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -53,6 +53,7 @@ app.set('views', `${__dirname}/../views`);
     - https://www.npmjs.com/package/express-handlebars
   - `app.set()`
     - https://expressjs.com/en/api.html#app.set
+  - Note that thr HTML files in the **views/** folder now have a ****
 
 ---
 
