--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -55,6 +55,11 @@ app.set('views', `${__dirname}/../views`);
   - `app.set()`
     - https://expressjs.com/en/api.html#app.set
   - Note that the HTML files in the **views/** folder now have a **.handlebars** extension
+  - **controllers/index.js**
+    - this is where most of our new changes are going to be
+    - rather than doing `res.sendFile()`, we are going to use handlebars to fill in our templates and send back the result of that operation
+  
+
 
 ---
 
