--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -29,6 +29,8 @@
 
 ## II. Demo: Server-side rendering with `express` & `express-handlebars`
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+
+### II-A. Some Start Code
 - Here's some code to get you started in **app.js**
 
 ```js
@@ -44,23 +46,74 @@ app.set('view engine', 'handlebars');
 app.set('views', `${__dirname}/../views`);
 ```
 
-- Notes:
-  - If you check out **package.json** you'll see that there is a `express-handlebars` dependency ...
-  - ... in **app.js** we are importing `express-handlebars`
-  - And now we have some new express methods to work with `app.engine()` and `app.set()`
-  - `app.engine()`
-    - https://expressjs.com/en/api.html#app.engine
-    - https://expressjs.com/en/guide/using-template-engines.html
-    - https://www.npmjs.com/package/express-handlebars
-  - `app.set()`
-    - https://expressjs.com/en/api.html#app.set
-  - Note that the HTML files in the **views/** folder now have a **.handlebars** extension
-  - **controllers/index.js**
-    - this is where most of our new changes are going to be
-    - rather than doing `res.sendFile()`, we are going to use handlebars to fill in our templates and send back the result of that operation
+
+### II-B. Overview
+- If you check out **package.json** you'll see that there is a `express-handlebars` dependency ...
+- ... in **app.js** we are importing `express-handlebars`
+- And now we have some new express methods to work with `app.engine()` and `app.set()`
+- `app.engine()`
+  - https://expressjs.com/en/api.html#app.engine
+  - https://expressjs.com/en/guide/using-template-engines.html
+  - https://www.npmjs.com/package/express-handlebars
+- `app.set()`
+  - https://expressjs.com/en/api.html#app.set
+- Note that the HTML files in the **views/** folder now have a **.handlebars** extension
+- **controllers/index.js**
+  - this is where most of our new changes are going to be
+  - rather than doing `res.sendFile()`, we are going to use handlebars to fill in our templates and send back the result of that operation
   
 
+### II-C. Look in views/index.handlebars
 
+- Check out the title tag `<title>{{title}}</title>`
+
+
+### II-D. controllers/index.js
+
+- Add the following to `hostIndex`
+
+```js
+res.render('index', {
+  title: 'Home',
+});
+```
+
+- `res.render()`
+  - renders a view and sends the rendered HTML string to the client
+  - https://expressjs.com/en/4x/api.html#res.render
+
+---
+
+- `npm run nodemon` to test the code
+
+---
+
+### II-E. More for views/index.handlebars
+
+```html
+<h1>Welcome to {{pageName}}!</h1>
+<p>How are you today, {{userName}}?</p>
+```
+
+---
+
+- Now go ahead and pass in a `pageName` and `userName` value
+
+---
+
+### II-F. And so on
+
+- Let's look at:
+  - conditional rendering
+  - loops
+
+ ---
+
+ ## II-G. Discussion
+
+- What are some *advantages* of server-side rendering?
+- And *disadvantages*?
+ 
 ---
 
 ## III. Demo: More rendering with handlebars - loops & conditionals
