--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -118,6 +118,7 @@ res.render('index', {
 
 ## III. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
+- This time we have a hard-coded data file
 
  
 ---
