--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -113,12 +113,14 @@ res.render('index', {
 
 - What are some *advantages* of server-side rendering?
 - And *disadvantages*?
+- Nice listing of pros and cons --> https://prismic.io/blog/what-is-ssr
  
 ---
 
 ## III. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
-- This time we have a hard-coded data file
+- This time we have a hard-coded data file of movies
+- We will see how to access multiple query string parameters and filter the results****
 
  
 ---
