--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -109,7 +109,7 @@ res.render('index', {
 
  ---
 
- ## II-G. Discussion
+### II-G. Discussion
 
 - What are some *advantages* of server-side rendering?
 - And *disadvantages*?
