--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -12,6 +12,14 @@
 
 ---
 
+- Today's topic - Server-side rendering with Handlebars
+- *SSR is a method where the server generates the HTML and CSS code for a web page and sends it to the client (the user's browser) as a fully rendered page*
+- We've actually seen server-side rendering (aka SSR) already - during week 2:
+  - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
+- Nice listing of SSR pros and cons --> https://prismic.io/blog/what-is-ssr
+
+---
+
 ## I. About Handlerbars
 - Handlebars is a simple *templating* language.
 - It uses a *template* and an *input object* to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions:
