--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -1,6 +1,6 @@
 # Week 10A Notes
 
-## 0. Questions from last time?
+## I. Questions from last time?
 
 ---
 
@@ -12,7 +12,7 @@
 
 ---
 
-- Today's topic - Server-side rendering with Handlebars
+## II. Today's topic - Server-side rendering with Handlebars
 - *SSR is a method where the server generates the HTML and CSS code for a web page and sends it to the client (the user's browser) as a fully rendered page*
 - We've actually seen server-side rendering (aka SSR) already - during week 2:
   - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
@@ -20,7 +20,7 @@
 
 ---
 
-## I. About Handlerbars
+## II. About Handlerbars
 - Handlebars is a simple *templating* language.
 - It uses a *template* and an *input object* to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions:
 
@@ -35,10 +35,10 @@
 
 ---
 
-## II. Demo: Server-side rendering with `express` & `express-handlebars`
+## III. Demo: Server-side rendering with `express` & `express-handlebars`
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
-### II-A. Some Start Code
+### III-A. Some Start Code
 - Here's some code to get you started in **app.js**
 
 ```js
@@ -55,7 +55,7 @@ app.set('views', `${__dirname}/../views`);
 ```
 
 
-### II-B. Overview
+### III-B. Overview
 - If you check out **package.json** you'll see that there is a `express-handlebars` dependency ...
 - ... in **app.js** we are importing `express-handlebars`
 - And now we have some new express methods to work with `app.engine()` and `app.set()`
@@ -71,12 +71,12 @@ app.set('views', `${__dirname}/../views`);
   - rather than doing `res.sendFile()`, we are going to use handlebars to fill in our templates and send back the result of that operation
   
 
-### II-C. Look in views/index.handlebars
+### III-C. Look in views/index.handlebars
 
 - Check out the title tag `<title>{{title}}</title>`
 
 
-### II-D. controllers/index.js
+### III-D. controllers/index.js
 
 - Add the following to `hostIndex`
 
@@ -96,7 +96,7 @@ res.render('index', {
 
 ---
 
-### II-E. More for views/index.handlebars
+### III-E. More for views/index.handlebars
 
 ```html
 <h1>Welcome to {{pageName}}!</h1>
@@ -109,7 +109,7 @@ res.render('index', {
 
 ---
 
-### II-F. And so on
+### III-F. And so on
 
 - Let's look at:
   - conditional rendering
@@ -117,7 +117,7 @@ res.render('index', {
 
  ---
 
-### II-G. Discussion
+### III-G. Discussion
 
 - What are some *advantages* of server-side rendering?
 - And *disadvantages*?
@@ -125,7 +125,7 @@ res.render('index', {
  
 ---
 
-## III. Demo: More rendering with handlebars - loops & conditionals
+## IV. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - This time we have a hard-coded data file of movies
 - We will see how to access multiple query string parameters and filter the results****
