--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -20,7 +20,7 @@
 
 ---
 
-## II. About Handlerbars
+## III. About Handlerbars
 - Handlebars is a simple *templating* language.
 - It uses a *template* and an *input object* to generate HTML or other text formats. Handlebars templates look like regular text with embedded Handlebars expressions:
 
@@ -35,10 +35,10 @@
 
 ---
 
-## III. Demo: Server-side rendering with `express` & `express-handlebars`
+## IV. Demo: Server-side rendering with `express` & `express-handlebars`
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
-### III-A. Some Start Code
+### IV-A. Some Start Code
 - Here's some code to get you started in **app.js**
 
 ```js
@@ -55,7 +55,7 @@ app.set('views', `${__dirname}/../views`);
 ```
 
 
-### III-B. Overview
+### IV-B. Overview
 - If you check out **package.json** you'll see that there is a `express-handlebars` dependency ...
 - ... in **app.js** we are importing `express-handlebars`
 - And now we have some new express methods to work with `app.engine()` and `app.set()`
@@ -71,12 +71,12 @@ app.set('views', `${__dirname}/../views`);
   - rather than doing `res.sendFile()`, we are going to use handlebars to fill in our templates and send back the result of that operation
   
 
-### III-C. Look in views/index.handlebars
+### IV-C. Look in views/index.handlebars
 
 - Check out the title tag `<title>{{title}}</title>`
 
 
-### III-D. controllers/index.js
+### IV-D. controllers/index.js
 
 - Add the following to `hostIndex`
 
@@ -96,7 +96,7 @@ res.render('index', {
 
 ---
 
-### III-E. More for views/index.handlebars
+### IV-E. More for views/index.handlebars
 
 ```html
 <h1>Welcome to {{pageName}}!</h1>
@@ -109,7 +109,7 @@ res.render('index', {
 
 ---
 
-### III-F. And so on
+### IV-F. And so on
 
 - Let's look at:
   - conditional rendering
@@ -117,7 +117,7 @@ res.render('index', {
 
  ---
 
-### III-G. Discussion
+### IV-G. Discussion
 
 - What are some *advantages* of server-side rendering?
 - And *disadvantages*?
@@ -125,7 +125,7 @@ res.render('index', {
  
 ---
 
-## IV. Demo: More rendering with handlebars - loops & conditionals
+## V. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - This time we have a hard-coded data file of movies
 - We will see how to access multiple query string parameters and filter the results****
