--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -17,6 +17,7 @@
 - We've actually seen server-side rendering (aka SSR) already - during week 2:
   - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
 - Nice listing of SSR pros and cons --> https://prismic.io/blog/what-is-ssr
+- Let's head to a "big" website like rit.edu or amazon.com - which parts of the site are SSR? Which parts are CSR?
 
 ---
 
