--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -8,7 +8,7 @@
 
 ---
 
-- Discuss - last time we saw that express throws an exception when HTTP headers are sent at "the wrong time" - why?
+- Discuss - last time (in the debugging demo) we saw that express throws an exception when HTTP headers are sent at "the wrong time" - why?
 
 ---
 
