--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -16,6 +16,7 @@
 - *SSR is a method where the server generates the HTML and CSS code for a web page and sends it to the client (the user's browser) as a fully rendered page*
 - We've actually seen server-side rendering (aka SSR) already - during week 2:
   - [3 - Web services & Query Strings (Demo)](../exercises/3-web-service-query-string.md)
+- SSR overview --> https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Introduction
 - Nice listing of SSR pros and cons --> https://prismic.io/blog/what-is-ssr
 - Let's head to a "big" website like rit.edu or amazon.com - which parts of the site are SSR? Which parts are CSR?
 
