--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -38,6 +38,7 @@
 ---
 
 ## IV. Demo: Server-side rendering with `express` & `express-handlebars`
+- [YouTube - Simple MVC Templates - SSR with Handlebars/Express Demo](https://www.youtube.com/watch?v=pvC7moS6FeQ)
 - [Demo start code for `simple-mvc-templates`](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-templates) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 
 ### IV-A. Some Start Code
