--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -1,6 +1,7 @@
 # Week 10B
 
-## I. MongoDB
+## I. MongoDB HW
+- [MongoDB - Intro to mongo shell](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/mongo-shell-intro.md)
 
 
 ---
