--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -139,4 +139,4 @@ res.render('index', {
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 9B Notes**](09B.md)  |  [**IGME-430 Home**](../) | Week 10B Notes
+|   [**Week 9B Notes**](09B.md)  |  [**IGME-430 Home**](../) | [**Week 10B Notes**](10B.md)
