--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -1,7 +1,16 @@
 # Week 10B
 
-## I. MongoDB HW
-- [MongoDB - Intro to mongo shell](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/mongo-shell-intro.md)
+## I. Databases
+- Database Presentation:
+  -  See *Databases 9.1* PDF in Week 10 of myCourses
+  - [YouTube: Rich Media 2 - Week 8.1 Databases](https://www.youtube.com/watch?v=BnUBOLjXVZU)
+- HW - Database Worksheet:
+  - see myCourses for due date and details
+ 
+---
+
+## II. MongoDB
+- [HW - MongoDB - Intro to mongo shell](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/mongo-shell-intro.md)
 
 
 ---
