--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -4,6 +4,11 @@
 - Database Presentation:
   -  See *Databases 9.1* PDF in Week 10 of myCourses
   - [YouTube: Rich Media 2 - Week 8.1 Databases](https://www.youtube.com/watch?v=BnUBOLjXVZU)
+  - Database Popularity:
+    - https://db-engines.com/en/ranking
+    - Note that [PostgreSQL](https://www.postgresql.org/) has continued to grow in popularity, while [mySQL](https://www.mysql.com/) is shrinking
+    - PostgreSQL is open source, relational, and also has a robust language for querying key:value data
+    - [MongoDB](https://www.mongodb.com/) is still popular in the rankings at #5
 - HW - Database Worksheet:
   - see myCourses for due date and details
  
