--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -16,6 +16,12 @@
 
 ## II. MongoDB
 - [HW - MongoDB - Intro to mongo shell](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/mongo-shell-intro.md)
+  - Covers the CRUD operations of MongoDB
+
+---
+
+## III. Mongoose
+- [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
 
 
 ---
