--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -23,7 +23,7 @@
 ## III. Mongoose
 - https://mongoosejs.com/
 - Simple-MVC-Example:
-  - [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
+  - Walkthough --> [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
   - Start Code --> [Simple-MVC-Example](https://github.com/IGM-RichMedia-at-RIT/Simple-MVC-Example)
   <!-- - [Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done) -->
 
