--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -24,7 +24,7 @@
 - https://mongoosejs.com/
 - Simple-MVC-Example:
   - Walkthough --> [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
-  - Start Code --> [Simple-MVC-Example](https://github.com/IGM-RichMedia-at-RIT/Simple-MVC-Example)
+  - Start Code --> [Simple-MVC-Example](https://github.com/IGM-RichMedia-at-RIT/Simple-MVC-Example) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
   <!-- - [Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done) -->
 
 ---
