--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -27,10 +27,7 @@
   - Walkthough --> [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
   - Start Code --> [Simple-MVC-Example](https://github.com/IGM-RichMedia-at-RIT/Simple-MVC-Example) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
   - Note that unlike what the video is doing, you do not need to install a local version of MongoDB, and can solely use a MongoDB cloud database
-
-
-
-  <!-- - [Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done) -->
+  - [Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done)
 
 ---
 ---
