--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -25,9 +25,11 @@
 - https://www.npmjs.com/package/mongoose
 - Simple-MVC-Example:
   - Walkthough --> [YouTube: Week 8.2 Simple MVC - Models](https://www.youtube.com/watch?v=2DgCCVpRRbM)
+    - note that unlike what the video is doing, you do not need to install a local version of MongoDB, and can solely use a MongoDB cloud database
+    - also note that some of the code in the video is deprecated, and the correct code is in "done" version linked below, and in the *9.2 Simple MVC Example.docx* file in myCourses
   - Start Code --> [Simple-MVC-Example](https://github.com/IGM-RichMedia-at-RIT/Simple-MVC-Example) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
-  - Note that unlike what the video is doing, you do not need to install a local version of MongoDB, and can solely use a MongoDB cloud database
-  - [Simple-MVC-Example - Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done)
+  - "Done" Code --> [Simple-MVC-Example - Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done)
+  
 
 ---
 ---
