--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -1,5 +1,11 @@
 # Week 10B
 
+## Review Handlebars
+- [HW - Week 10A - Express Handlebars](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/express-handlebars-demo.md#iii-demo--hw)
+- "Done" Code --> [Simple-MVC-Example - Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done)
+
+---
+
 ## I. Databases
 - Database Presentation:
   -  See *Databases 9.1* PDF in Week 10 of myCourses
