--- a/weekly/10A.md
+++ b/weekly/10A.md
@@ -131,7 +131,8 @@ res.render('index', {
 ## V. Demo: More rendering with handlebars - loops & conditionals
 - [Demo start code for `simple-template-api`](https://github.com/IGM-RichMedia-at-RIT/simple-template-api) - just `git clone` or download the ZIP and `npm i` / `npm run nodemon`, you don't need to fork this repo
 - This time we have a hard-coded data file of movies
-- We will see how to access multiple query string parameters and filter the results****
+- **We will see how to access multiple query string parameters and filter the results**
+- Completed code --> [simple-template-api-done](https://github.com/IGM-RichMedia-at-RIT/simple-template-api-done)
 
  
 ---
