--- a/weekly/10B.md
+++ b/weekly/10B.md
@@ -2,7 +2,7 @@
 
 ## Review Handlebars
 - [HW - Week 10A - Express Handlebars](https://github.com/tonethar/IGME-430-Spring-2020/blob/master/notes/express-handlebars-demo.md#iii-demo--hw)
-- "Done" Code --> [Simple-MVC-Example - Commented "Done" Code](https://github.com/IGM-RichMedia-at-RIT/simple-mvc-example-done)
+- "Done" Code --> [simple-template-api-done](https://github.com/IGM-RichMedia-at-RIT/simple-template-api-done)
 
 ---
 
