--- a/weekly/11A.md
+++ b/weekly/11A.md
@@ -27,6 +27,10 @@
 ## III. SimpleModels HW
 - Worth 2 HW assignments
 - For "start" code, it uses the "Done" version of *Simple-MVC-Example* above
+- Tips:
+  - I named my `POST` endpoint `/createDog` and my `GET` endpoint `/findDogAndAge` (but you can name them whatever you want)
+  - You will also need to implement `/page4`, which is pretty much just the `Dog` version of `/page1`
+  - Important --> `Model.find()`, `Model.findOne()`, and `Model.findOneAndUpdate()` each return a `doc` if they find a match, and `undefined` if they do not
 
 ---
 ---
