--- a/weekly/11A.md
+++ b/weekly/11A.md
@@ -31,6 +31,38 @@
   - I named my `POST` endpoint `/createDog` and my `GET` endpoint `/findDogAndAge` (but you can name them whatever you want)
   - You will also need to implement `/page4`, which is pretty much just the `Dog` version of `/page1`
   - Important --> `Model.find()`, `Model.findOne()`, and `Model.findOneAndUpdate()` each return a `doc` if they find a match, and `undefined` if they do not
+- Extra requirement, not listed in PDF:
+  - add navigation element for page4, to all 5 pages, see screenshots below:
+
+---
+
+### Description-1
+![screenshot](_images/hw-simple-models-1.png)
+
+---
+
+### Description-2
+![screenshot](_images/hw-simple-models-2.png)
+
+---
+
+### Description-3
+![screenshot](_images/hw-simple-models-3.png)
+
+---
+
+### Description-4
+![screenshot](_images/hw-simple-models-4.png)
+
+---
+
+### Description-5
+![screenshot](_images/hw-simple-models-5.png)
+
+---
+
+### Description-6
+![screenshot](_images/hw-simple-models-6.png)
 
 ---
 ---
