--- a/weekly/11A.md
+++ b/weekly/11A.md
@@ -36,32 +36,32 @@
 
 ---
 
-### Description-1
+### `GET` `/page3` - add a new dog
 ![screenshot](_images/hw-simple-models-1.png)
 
 ---
 
-### Description-2
+### `POST` `/createDog` - provided dog name already existed
 ![screenshot](_images/hw-simple-models-2.png)
 
 ---
 
-### Description-3
+### `POST` `/createDog` - success
 ![screenshot](_images/hw-simple-models-3.png)
 
 ---
 
-### Description-4
+### `GET` `/findDogAndAge` - success
 ![screenshot](_images/hw-simple-models-4.png)
 
 ---
 
-### Description-5
+### `GET` `/findDogAndAge` - failure
 ![screenshot](_images/hw-simple-models-5.png)
 
 ---
 
-### Description-6
+### `GET` `/page3` - view all dogs
 ![screenshot](_images/hw-simple-models-6.png)
 
 ---
