--- a/weekly/11A.md
+++ b/weekly/11A.md
@@ -41,7 +41,9 @@
 
 ---
 
-### `POST` `/createDog` - provided dog name already existed
+### `POST` `/createDog` - ERROR - provided dog name already existed
+- If you check the console in VSCode , you'll see `E11000 duplicate key error collection: simpleModelsHW.dogs index: name_1 dup key: { name: "Waggers" }`
+
 ![screenshot](_images/hw-simple-models-2.png)
 
 ---
@@ -56,7 +58,7 @@
 
 ---
 
-### `GET` `/findDogAndAge` - failure
+### `GET` `/findDogAndAge` - ERROR
 ![screenshot](_images/hw-simple-models-5.png)
 
 ---
