--- a/weekly/11A.md
+++ b/weekly/11A.md
@@ -71,4 +71,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 10B Notes**](10B.md)  |  [**IGME-430 Home**](../) | Week 11B Notes
+|   [**Week 10B Notes**](10B.md)  |  [**IGME-430 Home**](../) | [**Week 11B Notes**](11B.md)
