--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -11,6 +11,17 @@
 - You will be building a site to make new "Domo" characters and track some basic stats. The user will make an account, login and then name their new character and give them an age.
 - Data will be persisted in MongoDB Atlas (the "cloud") and users will be able to login on any computer and see the characters they have created
 
+### II-A. Get Started!
+
+- One thing - want to get rid of these annoying ESLint warnings about console.logs?
+  - add `"no-console": "off"` to your **.eslintrc** file
+
+### II-B. All done and working?
+- A couple of things to fix in **app.js**:
+  - go ahead and uninstall `bodyParser` and modify the code to work without it
+  - make it so the web server does not start up until mongo has successfully loaded
+  - you need to hide your MongoDB Atlas connection string somewhere, otherwise it will be visible in GitHub! There are 2 ways we could do this.
+ 
 
 ---
 ---
