--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -28,4 +28,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 11A Notes**](10B.md)  |  [**IGME-430 Home**](../) | Week 12A Notes
+|   [**Week 11A Notes**](11A.md)  |  [**IGME-430 Home**](../) | Week 12A Notes
