--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -19,7 +19,7 @@
 ### II-B. All done and working?
 - A few things to fix in **app.js**:
   - go ahead and uninstall `bodyParser` and modify the code to work without it
-  - make it so the web server does not start up until mongo has successfully loaded
+  - make it so the web server does not start up until MongoDB Atlas has been successfully connected to
   - you need to hide your MongoDB Atlas connection string somewhere, otherwise it will be visible in GitHub! There are 2 ways we could do this.
  
 
