--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -12,8 +12,9 @@
 - Data will be persisted in MongoDB Atlas (the "cloud") and users will be able to login on any computer and see the characters they have created
 
 ### II-A. Get Started!
-
-- One thing - want to get rid of these annoying ESLint warnings about console.logs?
+- Important --> `git clone <url>` the starting repo, or download the ZIP, don't fork it!
+- Important --> when you set up your MongoDB connection string, name the database `DomoMaker-A` 
+- Another thing - want to get rid of these annoying ESLint warnings about console.logs?
   - add `"no-console": "off"` to your **.eslintrc** file
 
 ### II-B. All done and working?
@@ -22,6 +23,29 @@
   - make it so the web server does not start up until MongoDB Atlas has been successfully connected to
   - you need to hide your MongoDB Atlas connection string somewhere, otherwise it will be visible in GitHub! There are 2 ways we could do this.
  
+#### One way - create a mongo-connection.js file
+- Create **mongo-connection.js** and put it at the top level of the project (the same as **.gitignore** or **package.json** for example)
+- Add **mongo-connection.js** to **.gitignore**
+- Make **.gitignore** look like this:
+
+```js
+module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
+```
+
+ ### III-C. Push this to GitHub
+ - Create a new empty repo on GitHub named **DomoMaker-A**
+ - You'll see some code like this for connecting an existing local repo to this remote repo
+
+```
+git remote add origin https://github.com/<your-id>/DomoMaker-A.git
+git branch -M main
+git push -u origin main
+```
+
+- But because your local repo already has an `origin`, that line will instead have to look like this ...
+  - ... `git remote set-url origin https://github.com/<your-id>/DomoMaker-A.git`
+- Now go ahead and `git add .`, `git commit -m "First commit`, `git push` etc
+
 
 ---
 ---
