--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -17,13 +17,15 @@
 - Another thing - want to get rid of these annoying ESLint warnings about console.logs?
   - add `"no-console": "off"` to your **.eslintrc** file
 
+---
+
 ### II-B. All done and working?
 - A few things to fix in **app.js**:
   - go ahead and uninstall `bodyParser` and modify the code to work without it
   - make it so the web server does not start up until MongoDB Atlas has been successfully connected to
   - you need to hide your MongoDB Atlas connection string somewhere, otherwise it will be visible in GitHub! There are 2 ways we could do this.
  
-#### One way - create a mongo-connection.js file
+#### II-B-i. One way - create a mongo-connection.js file
 - Create **mongo-connection.js** and put it at the top level of the project (the same as **.gitignore** or **package.json** for example)
 - Add **mongo-connection.js** to **.gitignore**
 - Make **.gitignore** look like this:
@@ -31,6 +33,15 @@
 ```js
 module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 ```
+
+- Now the `const dbURI = ...` in **app.js** needs to look like this ...
+  - ... `const dbURI = process.env.MONGODB_URI || require('../.mongo-connection.js');`
+- And to make ESLint happy ...
+  - add ` "global-require": "off"` to your **.eslintrc** file
+
+#### II-B-ii. Another way 
+
+---
 
  ### III-C. Push this to GitHub
  - Create a new empty repo on GitHub named **DomoMaker-A**
