--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -45,7 +45,7 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 
  ### III-C. Push this to GitHub
  - Create a new empty repo on GitHub named **DomoMaker-A**
- - You'll see some code like this for connecting an existing local repo to this remote repo
+ - You'll see some code like this for connecting an existing local repo to this remote repo (but don't type it in yet!):
 
 ```
 git remote add origin https://github.com/<your-id>/DomoMaker-A.git
