--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -44,6 +44,8 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 ---
 
  ### III-C. Push this to GitHub
+ - Have you run `npm test` yet? Better do so now (and fix any errors!)
+ - Now go ahead and `git add .` and `git commit -m "First commit` your local code to get it up to date
  - Create a new empty repo on GitHub named **DomoMaker-A**
  - You'll see some code like this for connecting an existing local repo to this remote repo (but don't type it in yet!):
 
@@ -55,7 +57,7 @@ git push -u origin main
 
 - But because your local repo already has an `origin`, that line will instead have to look like this ...
   - ... `git remote set-url origin https://github.com/<your-id>/DomoMaker-A.git`
-- Now go ahead and `git add .`, `git commit -m "First commit`, `git push` etc
+
 
 
 ---
