--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -41,11 +41,15 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 
 #### II-B-ii. Another way 
 
+ - But the standard way is to use the [`dotenv` package](https://www.npmjs.com/package/dotenv ) and a **.env file** 
+ - You'll use that for redis (later on in domomaker) as well
+ - You can just make a simple **.env** file that says `MONGODB_URI=CONNECTION_STRING_HERE` and have it load that into process.env.MONGODB_URI just like heroku would with their config vars
+
 ---
 
  ### III-C. Push this to GitHub
  - Have you run `npm test` yet? Better do so now (and fix any errors!)
- - Now go ahead and `git add .` and `git commit -m "First commit` your local code to get it up to date
+ - Now go ahead and `git add .` and `git commit -m "First commit` and ``your local code to get it up to date
  - Create a new empty repo on GitHub named **DomoMaker-A**
  - You'll see some code like this for connecting an existing local repo to this remote repo (but don't type it in yet!):
 
