--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -62,7 +62,10 @@ git push -u origin main
 - But because your local repo already has an `origin`, that line will instead have to look like this ...
   - ... `git remote set-url origin https://github.com/<your-id>/DomoMaker-A.git`
 
+---
 
+### III-D. Create a Heroku App
+- Name it **<abc1234>-domomaker-a** (where abc1234 is your id)
 
 ---
 ---
