--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -13,7 +13,7 @@
 
 ### II-A. Get Started!
 - Important --> `git clone <url>` the starting repo, or download the ZIP, don't fork it!
-- Important --> when you set up your MongoDB connection string, name the database `DomoMaker-A` 
+- Important --> when you set up your MongoDB connection string, name the database `DomoMaker` 
 - Another thing - want to get rid of these annoying ESLint warnings about console.logs?
   - add `"no-console": "off"` to your **.eslintrc** file
 
