--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -65,7 +65,7 @@ git push -u origin main
 ---
 
 ### III-D. Create a Heroku App
-- Name it **&lt;abc1234>-domomaker** (where abc1234 is your id)
+- Name it **&lt;abc1234>-domomaker** (where &lt;abc1234> is your id)
 
 ---
 ---
