--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -39,7 +39,7 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 - And to make ESLint happy ...
   - add ` "global-require": "off"` to your **.eslintrc** file
 
-#### II-B-ii. Another way 
+#### II-B-ii. Another way - a .env file
 
  - But the standard way is to use the [`dotenv` package](https://www.npmjs.com/package/dotenv ) and a **.env file** 
  - You'll use that for redis (later on in domomaker) as well
