--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -12,17 +12,19 @@
 - Data will be persisted in MongoDB Atlas (the "cloud") and users will be able to login on any computer and see the characters they have created
 
 ### II-A. Get Started!
-- Important --> `git clone <url>` the starting repo, or download the ZIP, don't fork it!
-- Important --> when you set up your MongoDB connection string, name the database `DomoMaker` 
+- Important --> `git clone <url>` the starting repo, or download the ZIP, OR fork the start code repo on github.com
+- Important --> when you set up your MongoDB Atlas connection string, name the database `/DomoMaker` ...
+- ... also, add these two params to the end (for Atlas) - like this - `.../DomoMaker?retryWrites=true&w=majority`
+  - https://www.mongodb.com/docs/manual/core/retryable-writes/
+  - https://www.mongodb.com/docs/manual/reference/write-concern
 - Another thing - want to get rid of these annoying ESLint warnings about console.logs?
   - add `"no-console": "off"` to your **.eslintrc** file
 
 ---
 
 ### II-B. All done and working?
-- A few things to fix in **app.js**:
+- Two things to fix in **app.js**:
   - go ahead and uninstall `bodyParser` and modify the code to work without it
-  - make it so the web server does not start up until MongoDB Atlas has been successfully connected to
   - you need to hide your MongoDB Atlas connection string somewhere, otherwise it will be visible in GitHub! There are 2 ways we could do this.
  
 #### II-B-i. One way - create a mongo-connection.js file
@@ -40,10 +42,9 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
   - add ` "global-require": "off"` to your **.eslintrc** file
 
 #### II-B-ii. Another way - a .env file
-
- - But the standard way is to use the [`dotenv` package](https://www.npmjs.com/package/dotenv ) and a **.env file** 
- - You'll use that for redis (later on in domomaker) as well
+ - But the standard Nodejs way is to use the [`dotenv` package](https://www.npmjs.com/package/dotenv ) and a **.env file** 
  - You can just make a simple **.env** file that says `MONGODB_URI=CONNECTION_STRING_HERE` and have it load that into process.env.MONGODB_URI just like heroku would with their config vars
+ - See the DomoMaker-C PDF - we use `dotenv` for redis
 
 ---
 
