--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -50,7 +50,7 @@ module.exports = 'mongodb+srv://...your-connection-string.../DomoMaker-A';
 
  ### III-C. Push this to GitHub
  - Have you run `npm test` yet? Better do so now (and fix any errors!)
- - Now go ahead and `git add .` and `git commit -m "First commit` and ``your local code to get it up to date
+ - Now go ahead and `git add .` and `git commit -m "First commit` your local code to get it up to date
  - Create a new empty repo on GitHub named **DomoMaker**
  - You'll see some code like this for connecting an existing local repo to this remote repo (but don't type it in yet!):
 
