--- a/weekly/11B.md
+++ b/weekly/11B.md
@@ -73,4 +73,4 @@ git push -u origin main
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 11A Notes**](11A.md)  |  [**IGME-430 Home**](../) | Week 12A Notes
+|   [**Week 11A Notes**](11A.md)  |  [**IGME-430 Home**](../) | [**Week 12A Notes**](12A.md)
