--- a/weekly/12A.md
+++ b/weekly/12A.md
@@ -13,6 +13,13 @@
 
 
 ---
+
+## III. Project 2
+- See PDF in myCourses for requirements
+- Checkpoint is due Tuesday 12/3 (right after Thanksgiving break)
+- Final version due date (nothing is accepted after this point) is Sunday night 12/15
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
