--- a/weekly/12A.md
+++ b/weekly/12A.md
@@ -4,12 +4,14 @@
 
 - Questions about [SimpleModels HW](11A.md#iii-simplemodels-hw)?
 - Two issues in some of the submissions:
-  - requiring `Dog` `.breed` to be "unique"
+  - requiring `Dog` `.breed` to be "unique" (it shouldn't be)
   - seached dog was not "aged"
 
 ---
 
 ## II. DomoMaker A
+- BTW - *Is running a local instance of mongo a good idea, or is just using Mongo DB Atlas (cloud) OK?*
+- [DomomMaker A Walkthrough](../concepts/domomaker-walkthrough.md#A)
 
 
 ---
