--- a/weekly/12A.md
+++ b/weekly/12A.md
@@ -11,7 +11,7 @@
 
 ## II. DomoMaker A
 - BTW - *Is running a local instance of mongo a good idea, or is just using Mongo DB Atlas (cloud) OK?*
-- [DomomMaker A Walkthrough](../concepts/domomaker-walkthrough.md#A)
+- [DomoMaker A Walkthrough](../concepts/domomaker-walkthrough.md#A)
 - [bad-password-encrypt.zip](../concepts/_files/bad-password-encrypt.zip)
 
 
