--- a/weekly/12A.md
+++ b/weekly/12A.md
@@ -19,7 +19,7 @@
 
 ## III. Project 2
 - See PDF in myCourses for requirements
-- Checkpoint is due Tuesday 12/3 (right after Thanksgiving break)
+- Checkpoint is due Thursday 12/5 (last day of class)
 - Final version due date (nothing is accepted after this point) is Sunday night 12/15
 
 ---
