--- a/weekly/12B.md
+++ b/weekly/12B.md
@@ -1,12 +1,12 @@
 # Week 12B
 
 ## I. DomoMaker-B
-- [DomoMaker A Walkthrough](../concepts/domomaker-walkthrough.md#B)
+- [DomoMaker B Walkthrough](../concepts/domomaker-walkthrough.md#B)
 
 ---
 
 ## II. DomoMaker-C
-- [DomoMaker A Walkthrough](../concepts/domomaker-walkthrough.md#C)
+- [DomoMaker C Walkthrough](../concepts/domomaker-walkthrough.md#C)
 
 ---
 
