--- a/weekly/12B.md
+++ b/weekly/12B.md
@@ -16,6 +16,13 @@
 - Final version due date (nothing is accepted after this point) is Sunday night 12/15
 
 ---
+
+## IV. DomoMaker-D (React)
+- DomoMaker-D is due 3PM before our next class
+- Here are the [IGME-330 React intro notes](https://github.com/tonethar/IGME-330-Master/blob/master/notes/react-intro.md)
+- Also assigned (see myCourses for submission instructions) --> [React Amiibo App](https://github.com/tonethar/IGME-330-Master/blob/master/notes/react-amiibo-app.md)
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
