--- a/weekly/12B.md
+++ b/weekly/12B.md
@@ -27,4 +27,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 11B Notes**](11B.md)  |  [**IGME-430 Home**](../) | Week 12B Notes
+|   [**Week 12A Notes**](12A.md)  |  [**IGME-430 Home**](../) | Week 13A Notes
