--- a/weekly/13.md
+++ b/weekly/13.md
@@ -1,7 +1,7 @@
 # Week 13
 
 
-## 1. Project 2
+## I. Project 2
 - See PDF in myCourses for requirements
 - Checkpoint is due Thursday 12/5 (last day of class)
 - Final version due date (nothing is accepted after this point) is Sunday night 12/15
