--- a/weekly/13.md
+++ b/weekly/13.md
@@ -16,6 +16,11 @@
 - Also assigned (see myCourses for submission instructions) --> [React Amiibo App](https://github.com/tonethar/IGME-330-Master/blob/master/notes/react-amiibo-app.md)
 
 ---
+
+# III. Have a good break!
+- no class this coming Tuesday - see you Tuesday 12/3!
+
+---
 ---
 
 | <-- Previous Unit | Home | Next Unit -->
