--- a/weekly/13.md
+++ b/weekly/13.md
@@ -25,4 +25,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 12A Notes**](12B.md)  |  [**IGME-430 Home**](../) | Week 14 Notes
+|   [**Week 12A Notes**](12B.md)  |  [**IGME-430 Home**](../) | [**Week 14 Notes**](14.md)
