--- a/weekly/14.md
+++ b/weekly/14.md
@@ -10,7 +10,7 @@
 
 ---
 
-## II. Unit Resting with Jest
+## II. Unit testing with Jest
 - *Jest is a delightful JavaScript Testing Framework with a focus on simplicity.*  - https://jestjs.io/
 - Demo:
   - [Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
