--- a/weekly/14.md
+++ b/weekly/14.md
@@ -13,8 +13,8 @@
 ## II. Unit testing with Jest
 - *Jest is a delightful JavaScript Testing Framework with a focus on simplicity.*  - https://jestjs.io/
 - Demo:
-  - [Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
-  - [Complete & Commented Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests-Done)
+  - [`Simple-Unit-Tests` Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
+  - [`Simple-Unit-Tests-Done` Complete & Commented Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests-Done)
   
 ---
 ---
