--- a/weekly/14.md
+++ b/weekly/14.md
@@ -11,7 +11,12 @@
 ---
 
 ## II. Unit testing with Jest
-- *Jest is a delightful JavaScript Testing Framework with a focus on simplicity.*  - https://jestjs.io/
+
+- ***Unit Testing** is a software testing technique in which individual units or components of a software application are tested in isolation. These units are the smallest pieces of code, typically functions or methods, ensuring they perform as expected.*
+  - https://www.geeksforgeeks.org/unit-testing-software-testing/
+- ***Jest** is a delightful JavaScript Testing Framework with a focus on simplicity.*
+  - https://jestjs.io/
+  - https://jestjs.io/docs/getting-started
 - Demo:
   - [`Simple-Unit-Tests` - Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
   - [`Simple-Unit-Tests-Done` - Complete & Commented Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests-Done)
