--- a/weekly/14.md
+++ b/weekly/14.md
@@ -27,4 +27,4 @@
 
 | <-- Previous Unit | Home | Next Unit -->
 | --- | --- | --- 
-|   [**Week 13 Notes**](13.md)  |  [**IGME-430 Home**](../) | :-|
+|   [**Week 13 Notes**](13.md)  |  [**IGME-430 Home**](../) | :-)
