--- a/weekly/14.md
+++ b/weekly/14.md
@@ -18,6 +18,8 @@
   - https://jestjs.io/
   - https://jestjs.io/docs/getting-started
   - https://jestjs.io/docs/api
+  - [`test()`](https://jestjs.io/docs/api#testname-fn-timeout)
+  - [`describe()`](https://jestjs.io/docs/api#describename-fn)
 - Demo:
   - [`Simple-Unit-Tests` - Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
   - [`Simple-Unit-Tests-Done` - Complete & Commented Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests-Done)
