--- a/weekly/14.md
+++ b/weekly/14.md
@@ -19,7 +19,7 @@
   - https://jestjs.io/docs/getting-started
   - https://jestjs.io/docs/api
   - [`test()`](https://jestjs.io/docs/api#testname-fn-timeout)
-  - [`expect`](https://jestjs.io/docs/expect)
+  - [`expect() methods`](https://jestjs.io/docs/expect)
   - [`describe()`](https://jestjs.io/docs/api#describename-fn)
 - Demo:
   - [`Simple-Unit-Tests` - Start Code](https://github.com/IGM-RichMedia-at-RIT/Simple-Unit-Tests)
